<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <!--头-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#51C477"
        android:orientation="horizontal">
    <ImageButton
        android:id="@+id/Release_item_layout_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@mipmap/back_icon"
        android:padding="8dp" />

        <TextView
            android:id="@+id/child_classify_text"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="美食-酒店"
            android:layout_marginTop="3dp"
            android:textColor="#FFFFFF"
            android:textSize="26sp"/>
    </LinearLayout>
    <!--照相机-->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@mipmap/photo"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#cccccc"/>
    <!---->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--商家名称-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Merchant_name"
            android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="阿里巴巴"
                android:background="@null"
               />
            </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--营业时间-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_hours"
            android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="开始时间"
                android:layout_marginLeft="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="至"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="结束时间"
                android:layout_marginLeft="60dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--人均消费-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_consumption"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="人均消费"
                android:background="@null"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="元"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--计量单位-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurement"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请填写好计量单位（例如小时，）"
                android:background="@null"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--地址-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请填写好地址"
                android:background="@null"
               />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--联系人-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请填写好联系人"
                android:background="@null"
              />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--电话-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Telephone"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请填写正确的联系方式（外地带“区号”）"
                android:background="@null"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#cccccc"/>
        <!--是否支持外卖服务-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/checkbox_bg_default"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="支持外卖服务"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"/>
        <!--外卖服务-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--外卖时间-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ake_away_time"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="开始时间"
                    android:layout_marginLeft="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="至"
                    android:textSize="20sp"
                    android:layout_marginLeft="40dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="结束时间"
                    android:layout_marginLeft="60dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#cccccc"/>
            <!--外卖范围-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Take_out_range"
                    android:textSize="20sp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="阿里巴巴"
                    android:background="@null"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#cccccc"/>
            <!--外卖收费-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Take_out_charge"
                    android:textSize="20sp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="人均消费"
                    android:background="@null"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="元"
                    android:textSize="20sp"
                    android:layout_marginLeft="40dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#cccccc"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="填写详情"
                    android:background="@null"
                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/caogao"
                    android:layout_weight="1"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/release"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>